# TTPS-chatbot

./: .env.example  .gitignore  README.md  WhatsappInt.md  WhatsappIntegration.md  app.py  docker-compose.yml  llm.py  pyproject.toml  rag.py  test_whatsapp.py
backend-flask/: .env.example  .gitignore  GUIA_DIAGNOSTICO.md  README.md  WhatsappInt.md  app.py  config.py  detailed_qdrant_check.py  diagnose_encoding.py  dockerfile  pyproject.toml  quick_test.py  test_delete_user.py  test_direct_search.py  verify_qdrant_structure.py
backend-flask/data/: chatbot.db  dev.sqlite  docs.sqlite
backend-flask/handlers/: webhook_handler.py
backend-flask/scripts/: compare_qdrant_access.py  diagnose_psycopg2.py  print_db_env.py
backend-flask/services/: n8n_service.py  whatsapp_service.py
backend-flask/src/: __init__.py
backend-flask/src/core/: config.py  config_service.py  database.py  scheduler.py  status_service.py  whatsapp_service.py
backend-flask/src/core/auth/: auth.py  system_flag.py  user.py
backend-flask/src/core/board/: config.py  document.py  status.py
backend-flask/src/core/monitoring/: endpoint_status.py
backend-flask/src/core/services/: endpoint_monitor_service.py  status_service.py  system_flag_services.py  user_services.py
backend-flask/src/styles/: login.css
backend-flask/src/utils/: embeddings.py  pdf_chunker.py  phone_utils.py  qdrant_service.py
backend-flask/src/web/templates/: base.html  (+3 more)
backend-flask/static/js/: status.js
backend-flask/static/styles/: base.css  header.css  layout.css  login.css
backend-flask/templates/: chat.html
(+37 files in other folders)
